fix: rename bgm to soundboard, fix tooltip in alignment tracker, and add manuals to soundboard and alignment tracker

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,3 +40,16 @@ ion-input {
 ion-card {
     box-shadow: none;
 }
+
+.tooltip {
+    position: absolute;
+    padding: 0.5rem;
+    background: #313639;
+    color: #f9f9f9;
+    border: 0px;
+    border-radius: 8px;
+    pointer-events: none;
+    font-size: 0.7rem;
+    z-index: 1;
+    opacity: 0;
+}
